--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,121 @@
-.App {
+* {
+  box-sizing: border-box;
+}
+
+.grid { 
+  display: grid;
+  width: 43%;
+  height: 43%;
+  margin: 10px auto;
+  grid-template-columns: repeat(3, 1fr);
+  justify-content: center;
+  align-content: stretch;
+  font-family: 'Quicksand', sans-serif;
+}
+
+.cell {
+  outline: 2px solid black;
+  width: 300px;
+  height: 300px;
+  background: white;   
+}
+
+.X {  
+  height: 300px;
+  width: 300px;
+  padding: 0;
+  line-height: 100%;
+  margin: auto;
+  text-align: center;
+  font-size: 300px;
+  color: red;
+}
+
+.O {
+  width: 300px;
+  height: 300px;
+  padding: 0;
+  line-height: 100%;
+  margin: auto;
+  text-align: center;
+  font-size: 300px;
+  color: red;
+}
+
+.turn-display {
+  font-size: 2em;
+}
+
+.display {
+  padding-top: 20px;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.winner-display {
+  font-size: 3em;
+  color: red;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.reset-btn {
+  margin: 2em;
+  background-color: bisque;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+
+.app {
+  position: relative;
+  width: 100vw;
+  height: 170vh;
+  background: black;
+  opacity: 0.8;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.display-off {
+  display: none;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media (max-width: 1400px) and (min-width: 700px){
+  .app {
+    height: 110vh;
   }
-  to {
-    transform: rotate(360deg);
+  .cell {
+    width: 200px;
+    height: 200px;
+  }
+  .X {
+    font-size: 200px;
+  }
+  .O {
+    font-size: 200px;
+  }
+  .turn-display {
+    font-size: 2em;
+  }
+  .winner-display {
+    font-size: 2.4em;
   }
 }
+
+@media (max-width: 700px) {
+  .app {
+    height: 100vh;
+  }
+  .cell {
+    width: 100px;
+    height: 100px;
+  }
+  .X {
+    font-size: 100px;
+  }
+  .O {
+    font-size: 100px;
+  }
+  .turn-display {
+    font-size: 1.6em;
+  }
+  .winner-display {
+    font-size: 2em;
+  }
+}
+
